grammar.js
    source_file: $ => repeat(choice(
        $.module_definition,
        $.script_block,
        $.address_block
    )),

    // AddressBlock = "address" <LeadingNameAccess> "{" (<Attributes> <Module>)* "}"
    module_definition: $ => seq(
      optional($.attributes),
      'module',
      $.module_identity,
      '{',
      repeat($._module_member),
      '}'
    ),

    _module_member: $ => choice(
      $.use_declaration,
      $.friend_declaration,
      $.constant_definition,
      $.struct_definition,
      $.enum_definition,
      $.function_definition,
      $.spec_block
    ),

    // ConstantDecl = "const" <Identifier> ":" <Type> "=" <Exp> ";"
    function_definition: $ => seq(
        optional($.attributes),
        // Modifiers: native, visibility, entry
        optional($.native_modifier),
        optional($.visibility_modifier),
        optional($.entry_modifier),
        optional($.inline_modifier),
        'fun',
        $.identifier,
        optional($.type_parameters),
        $.function_parameters,
        optional($.ret_type),
        repeat($.access_specifier), // acquires, reads, writes, pure
        choice($.block, ';')
    ),

    function_parameters: $ => seq(
        '(',
        commaSep($.function_parameter),
        ')'
    ),

    function_parameter: $ => seq(
        $.identifier,
        ':',
        $.type
    ),

    ret_type: $ => seq(
        ':',
        $.type
    ),

    // AccessSpecifier =
    //   "pure" | ( ( "!" )? ("acquires" | "reads" | "writes" ) <AccessSpecifierList> )
    block: $ => seq(
        '{',
        repeat($.use_declaration),
        repeat($._statement),
        optional($.expression),
        '}'
    ),

    _statement: $ => seq(
        choice(
            $.let_statement,
            $.expression
        ),
        ';'
    ),

    expression: $ => choice(
        $.address_expression,
        $.bool_literal,
        $.byte_string_literal,
        $.vector_literal,
        $.module_access_expr,
        $.num_literal,
        $.block,
        $.tuple_expression,
        $.if_expression,
        $.while_expression,
        $.loop_expression,
        $.for_expression,
        $.return_expression,
        $.abort_expression,
        $.break_expression,
        $.continue_expression,
        $.match_expression,
        $.lambda_expression,
        $.unary_expression,
        $.dereference_expression,
        $.borrow_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expression,
        $.call_expression,
        $.vector_access_expression,
        $.dot_expression,
        $.cast_expression,
        $.type_test_expression,
        $.quantifier_expression,
        $.spec_block
    ),

    spec_block: $ => seq(
        'spec',
        optional($.spec_target),
        '{',
        repeat($.spec_member),
        '}'
    ),

    spec_target: $ => choice(
        'module',
        $.identifier,
        seq('schema', $.identifier, optional($.type_parameters))
    ),

    spec_member: $ => choice(
        $.use_declaration,
        $.constant_definition,
        $.function_definition,
        seq(choice('invariant', 'axiom'), optional($.type_parameters), $.expression, ';'),
        seq(choice('assert', 'assume', 'ensures', 'requires', 'emits', 'aborts_if', 'aborts_with', 'succeeds_if', 'decreases', 'modifies'), $.expression, ';'),
        seq('pragma', commaSep($.spec_property), ';'),
        seq('let', optional('post'), $.identifier, '=', $.expression, ';'),
        seq(optional('global'), optional('local'), $.identifier, ':', $.type, ';'),
        seq('apply', $.expression, 'to', commaSep($._spec_apply_pattern), optional(seq('except', commaSep($._spec_apply_pattern))), ';'),
        seq('include', $.expression, ';'),
        seq('update', $.expression, ';')
    ),

    _spec_apply_pattern: $ => seq(
        optional(choice('public', 'internal')),
        choice($.identifier, '*'),
        optional($.type_parameters)
    ),

    spec_property: $ => seq(
        $.identifier,
        optional(seq('=', $.expression))
    ),

    binary_expression: $ => choice(
        prec.left(PREC.mult, seq($.expression, choice('*', '/', '%'), $.expression)),
        prec.left(PREC.add, seq($.expression, choice('+', '-'), $.expression)),
        prec.left(PREC.shift, seq($.expression, choice('<<', '>>'), $.expression)),
        prec.left(PREC.bit_and, seq($.expression, '&', $.expression)),
        prec.left(PREC.bit_xor, seq($.expression, '^', $.expression)),
        prec.left(PREC.bit_or, seq($.expression, '|', $.expression)),
        prec.left(PREC.range, seq($.expression, '..', $.expression)),
        prec.left(PREC.eq, seq($.expression, choice('==', '!=', '<', '>', '<=', '>='), $.expression)),
        prec.left(PREC.and, seq($.expression, '&&', $.expression)),
        prec.left(PREC.or, seq($.expression, '||', $.expression)),
        prec.right(PREC.spec_implies, seq($.expression, '==>', $.expression)),
        prec.left(PREC.spec_implies, seq($.expression, '<==>', $.expression))
    ),

    module_access_expr: $ => $.module_access,

    num_literal: $ => choice(
        $._hex_literal,
        seq($._hex_literal, $.num_suffix),
        /\d+(_\d+)*/,
        seq(/\d+(_\d+)*/, $.num_suffix)
    ),

    _hex_literal: $ => /0x[0-9a-fA-F]+(_[0-9a-fA-F]+)*/,

    bool_literal: $ => choice('true', 'false'),

    address_literal: $ => $._hex_literal,

    type_parameters: $ => seq(
      '<',
      commaSep($.type_parameter),
      '>'
    ),

    type_parameter: $ => seq(
      optional('phantom'),
      $.identifier,
      optional($.type_constraint)
    ),

    type: $ => choice(
      $.primitive_type,
      $.module_access,
      $.ref_type,
      $.fun_type,
      $.tuple_type
    ),

    primitive_type: $ => choice(
      token(prec(1, 'u8')), token(prec(1, 'u16')), token(prec(1, 'u32')),
      token(prec(1, 'u64')), token(prec(1, 'u128')), token(prec(1, 'u256')),
      token(prec(1, 'i8')), token(prec(1, 'i16')), token(prec(1, 'i32')),
      token(prec(1, 'i64')), token(prec(1, 'i128')), token(prec(1, 'i256')),
      token(prec(1, 'bool')),
      token(prec(1, 'address')),
      token(prec(1, 'signer')),
      token(prec(1, 'vector'))
    ),

    module_access: $ => seq(
        optional(seq($.address_literal, '::')),
        optional(seq($.identifier, '::')),
        $.identifier,
        optional($.type_arguments)
    ),

    module_identity: $ => choice(
        seq($.address_literal, '::', $.identifier),
        seq($.identifier, '::', $.identifier),
        $.identifier
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
